<resources>
    <string name="app_name">Bill Please</string>
    <string name="bill">Bill Amount</string>
    <string name="amount">Enter Amount</string>
    <string name="amtOfppl">Amount of People</string>
    <string name="Eamtofppl">Enter amount of people</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount%</string>
    <string name="EDiscPercent">Enter discount percentage</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
</resources>